2019-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dib.c (WriteDIBImage): Detect arithmetic overflow of
	image_size. Reduce compilation warnings.
	(EncodeImage): Reduce compilation warnings.

	* coders/locale.c (WriteLOCALEImage): Reduce compilation warnings.

2019-06-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (dist-zstd): Use the maximum possible compression
	level (22) when creating a Zstd-compressed tarball to get close to
	lzip/xz compression levels.

	* coders/tiff.c (ReadTIFFImage): Fix typo in initialization of
	'tile' pointer variable.

	* version.sh: Updates in preparation for 1.3.32 release.

2019-06-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (release): Add a release target to make it easier to
	produce and sign the release files.  Add a zstd-compressed output
	tarball just because we can.

2019-06-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Fix typo when initializing
	number_coordinates.  Somehow GCC and clang let this typo slip by.

2019-06-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dib.c (ReadDIBImage): Preserve PseudoClass opaque
	representation if ICO mask is opaque, otherwise return a
	DirectClass image.

2019-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Detect an error in TracePath() and
	quit rather than forging on.

2019-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Terminate drawing if
	DrawCompositeMask() reports failure.  Fixes oss-fuzz 12373
	"graphicsmagick/coder_MVG_fuzzer: Timeout in
	graphicsmagick_coder_MVG_fuzzer".
	(TracePath): Terminate path parsing upon first parsing error.

2019-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/txt.c (ReadTXTImage): Use real a new-line character as
	line delimiter rather than '\n' string.

	* magick/annotate.c (AnnotateImage): No longer implicitly call