@@ -38,6 +38,8 @@
 <p>2019-06-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/braille.c (WriteBRAILLEImage): Reduce compilation
+warnings.</li>
 <li>coders/dib.c (WriteDIBImage): Detect arithmetic overflow of
 image_size. Reduce compilation warnings.
 (EncodeImage): Reduce compilation warnings.</li>
