@@ -1,5 +1,8 @@
 2019-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/braille.c (WriteBRAILLEImage): Reduce compilation
+	warnings.
+
 	* coders/dib.c (WriteDIBImage): Detect arithmetic overflow of
 	image_size. Reduce compilation warnings.
 	(EncodeImage): Reduce compilation warnings.
